# UN_Conflict_Report

./: .gitignore  LICENSE  README.md  acled_feature_engineering.ipynb  country_extraction.ipynb  data_extractor.ipynb  gdelt.ipynb  gdelt_feature_engineering.ipynb  gdelt_full_text.ipynb  kg_from_gdeltnews.ipynb  main_script.ipynb  pyproject.toml  report_with_citations.md
graphrag_pipeline/: 02_example_kg_indexing.ipynb  03_example_kg_retrieval&graphrag.ipynb  03_example_kg_retrieval.ipynb  application.py  config.json  example_custom_kg_building.ipynb  example_kg_indexing.ipynb  google_ingest.ipynb  kg_building_config.json  kg_retrieval_config.json  main.py  pyproject.toml  pytest.ini  requirements.txt
graphrag_pipeline/config_files/: data_ingestion_config.json  evaluation_config.json  graphrag_config.json  kg_building_config.json  kg_building_config2.json  kg_retrieval_config.json
graphrag_pipeline/data/: Factal_Ethiopia.parquet  factal_Sudan.parquet
graphrag_pipeline/docs/: ACLED_bar_chart_implementation.md  README.md  config_files_guide.md  dev_guide.md
graphrag_pipeline/example_notebooks/: 01_example_custom_kg_building.ipynb  02_example_kg_indexing.ipynb  03_example_kg_retrieval&graphrag.ipynb  11_example_custom_kg_building_nastia_test.ipynb  12_example_kg_building_google.ipynb  Factal_Ethiopia.csv  acled_cast_ingest.ipynb  acled_download_curated_data.ipynb  acled_ingest.ipynb  eda_plots.ipynb  factal_ingest.ipynb  factal_spain.parquet  google_ingest.ipynb  regex_extraction_insertion_test.ipynb  tfidf_resolver_testing.ipynb  weird_error_with_google_nodes.txt
(+286 files in other folders)
