[project]
name = "un-conflict-report"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=0.14.0",
    "google-genai==1.16.1",
    "googlenewsdecoder==0.1.7",
    "ipywidgets==8.1.7",
    "kaleido>=0.2.1",
    "langchain-google-genai==2.1.5",
    "neo4j==5.28.1",
    "neo4j-graphrag[experimental,rapidfuzz,sentence-transformers,spacy]==1.7.0",
    "plotly>=5.17.0",
    "polars==1.30.0",
    "pyarrow==20.0.0",
    "pycountry>=22.3.0",
    "pygooglenews==0.1.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "python-dotenv==1.1.0",
    "rapidfuzz==3.13.0",
    "requests>=2.31.0",
    "sentence-transformers==3.4.1",
    "shapely>=2.0.0",
    "spacy==3.8.7",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "trafilatura==2.0.0",
]
